# 09aulabootcamp

./: README.md  exemplo_00.py  logging_exemplo_erros.py  pyproject.toml  util_log.py
