[tool.poetry]
name = "09aulabootcamp"
version = "0.1.0"
description = ""
authors = ["Jeferson Almeida <jeferson.live11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
